service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dulik-blog
spec:
  selector:
    app: dulik-blog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
