ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dulik-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - dulik.net
    secretName: dulik-tls
  rules:
  - host: dulik.net
    http:
      paths:
      - backend:
          serviceName: dulik-blog
          servicePort: 80
